# doctolib-availability-tracker

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: configuration.py  main.py  notify.py  scraper.py
src/doctolib_availability_tracker/: __init__.py  constants.py  main.py  notify.py  scraper.py
